Update for assignment 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Me</title>
+        <title>Caleb Lee, CSCE 656</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -11,7 +11,7 @@
             <img src="caleb_10.JPG" alt="Caleb Lee">
             <h1>Caleb Lee</h1>
             <p>
-                Howdy! I am a graduate student pursuing a Master of Computer Science degree. I am taking CSCE 656 to learn more about
+                Howdy! I am a graduate student pursuing a Master of Computer Science degree. I am taking CSCE 656 to learn more about important aspects of computer based media for building software that is easy for developers and users to interact with.
             </p>
         </div>
 
@@ -176,7 +176,10 @@
         </div>
 
         <div class="container">
-            <h1>Content Generation Challenges</h1>
+            <h1>Content Consumption Challenges</h1>
+            <p>
+                A challenge I face with content consumption is filtering and searching of new videos and music that I am interested in. I spend a lot of time on Youtube, and it requires constant blocking of undesired channels and refreshing for the Youtube algorithm to return desired content that is new, while pertaining to my interests. Furthermore, the Youtube search engine often times does not return relevant content due to heavy reliance on the recommendation algorithm.
+            </p>
         </div>
     </body>
 </html>
