--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <p>
                 Howdy! I am a graduate student pursuing a Master of Computer Science degree. I am taking CSCE 656 to learn more about important aspects of computer based media for building software that is easy for developers and users to interact with.
             </p>
+            <a href="Summaries.html">Summaries for readings</a>
         </div>
 
         <div class="container">
